# SecureVault-v1.0.0

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: python.yml
src/: main.py
src/auth/: authentication.py
src/crypto/: encryption.py
src/models/: credential.py
src/services/: backup_service.py  password_generator.py  password_strength.py  vault_service.py
tests/: test_authentication.py  test_backup_service.py  test_credential.py  test_encryption.py  test_main.py  test_password_generator.py  test_password_strength.py  test_vault_service.py
