[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "SecureVault-v1.0.0"
version = "1.0.0"
description = "A secure command-line password manager built with Python."
readme = "README.md"
requires-python = ">=3.14"
license = { file = "LICENSE" }
authors = [
    { name = "Rohit Pujari" }
]

dependencies = [
    "bcrypt>=5.0.0",
    "cryptography>=49.0.0"
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]